[metadata]
name = redflag
version = attr: redflag.__version__
author = Matt Hall
author_email = matt@agilescientific.com
description = Raise red flags on machine learning datasets.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/agile-geoscience/redflag
classifiers =
    Intended Audience :: Science/Research
    Development Status :: 3 - Alpha
    Natural Language :: English
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = redflag
python_requires = >=3.8
install_requires =
    numpy
    scipy

[options.extras_require]
docs = sphinx; myst_parser; sphinx_rtd_theme
test = pytest; pytest-cov
dev = build; pytest; pytest-cov; sphinx; myst_parser; sphinx_rtd_theme
sklearn = scikit-learn
