[metadata]
name = redflag
version = attr: redflag.__version__
author = Matt Hall
author_email = matt@agilescientific.com
description = Raise red flags on machine learning datasets.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/agilescientific/redflag
classifiers =
    Intended Audience :: Science/Research
    Development Status :: 3 - Alpha
    Natural Language :: English
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    scipy
    scitkit-learn

[options.extras_require]
docs = sphinx; sphinxcontrib-apidoc; myst_nb; furo; pandas; seaborn
test = pytest; pytest-cov
dev = build; pytest; pytest-cov; sphinx; sphinxcontrib-apidoc; myst_nb; furo; pandas; seaborn

[tool:pytest]
addopts = --doctest-modules
          --cov

[coverage:run]
omit = *__init__.py
       *_version.py
       *__main__.py
       *docs*
       *tests*
